--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-firebase/app": "^12.7.3",
     "@react-native-firebase/auth": "^12.7.3",
+    "@react-native-firebase/firestore": "^12.7.5",
     "@react-navigation/drawer": "^6.1.0",
     "@react-navigation/native": "^6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
