--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -190,6 +190,8 @@ android {
 dependencies {
     compile project(':react-native-vector-icons')
 
+    compile project(':react-native-google-place-picker')
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
