--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "@react-navigation/native-stack": "^6.0.2",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-google-place-picker": "^1.2.1",
+    "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-image-picker": "^4.0.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
+    "react-native-maps": "^0.29.4",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.5.0",
