--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-native-image-picker": "^4.0.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-maps": "^0.29.4",
-    "react-native-reanimated": "^2.2.0",
+    "react-native-reanimated": "2.1.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.5.0",
     "react-native-splash-screen": "^3.2.0",
